--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"pandahk 个人博客",
+    "title":"时光网",
     "subTitle":"欢迎来到我的博客",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "GMEEK_VERSION":"last",
