--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "title":"时光网",
+    "title":"魔方网",
     "subTitle":"欢迎来到我的博客",
     "avatarUrl":"https://github.githubassets.com/favicons/favicon.svg",
     "allHead":"<script src='https://blog.meekdai.com/assets/GmeekBSZ.js'></script>",
